<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/shareDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_name_hint"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/shareHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_host_hint"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/shareFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_folder_hint"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/shareUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_username_hint"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/sharePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/connectionStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12.5sp"
        android:paddingTop="8dp"
        android:visibility="gone" />

</LinearLayout>
